// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Appearance 1`] = `
<div
  className="sc-fnykZs fmpsuH"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Button
      </h3>
      <button
        appearance="primary"
        className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="primary"
        className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <button
        appearance="primary-ghost"
        className="sc-hKMtZM sc-iBkjds JKzku jwNdkq"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="primary-ghost"
        className="sc-hKMtZM sc-iBkjds JKzku jwNdkq"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Secondary Button
      </h3>
      <button
        appearance="secondary"
        className="sc-hKMtZM sc-jSMfEi GLyTH ioWRiD"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="secondary"
        className="sc-hKMtZM sc-jSMfEi GLyTH ioWRiD"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Dark Button
      </h3>
      <button
        appearance="dark"
        className="sc-hKMtZM sc-gKXOVf JKzku llhpmf"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="dark"
        className="sc-hKMtZM sc-gKXOVf JKzku llhpmf"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Gradient Button
      </h3>
      <button
        appearance="gradient"
        className="sc-hKMtZM sc-ftvSup JKzku cVtMTO"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="gradient"
        className="sc-hKMtZM sc-ftvSup JKzku cVtMTO"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button default
      </h3>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ bfyoha fikKSz u-fit-content-width"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ bfyoha fikKSz u-fit-content-width"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ bfyoha duhSHg u-fit-content-width"
        color="red"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Button
      </button>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ bfyoha duhSHg u-fit-content-width"
        color="red"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Disabled
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button Custom Sizes 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-fnykZs fmpsuH"
  >
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Small
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ dlWlef jriGrI"
          data-element="button"
          radius="default"
          size="small"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
          data-element="button"
          radius="default"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ dTXSoq jriGrI"
          data-element="button"
          radius="default"
          size="large"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Full width
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ bepVwx jriGrI u-full-width"
          data-element="button"
          radius="default"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Fit content
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ lmzisS jriGrI u-fit-content-width"
          data-element="button"
          radius="default"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Details 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-fnykZs fmpsuH"
  >
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Button
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
          data-element="button"
          disabled={false}
          radius="default"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Components/Button Icon 1`] = `
<div
  className="sc-fnykZs fmpsuH"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Button
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ hUkRow jriGrI"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ hjkHIi jriGrI"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="primary-ghost"
          className="sc-hKMtZM sc-iBkjds hUkRow izdpQA"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="primary-ghost"
          className="sc-hKMtZM sc-iBkjds hjkHIi izdpQA"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Secondary Button
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="secondary"
          className="sc-hKMtZM sc-jSMfEi fyjgJH cWQGDz"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="secondary"
          className="sc-hKMtZM sc-jSMfEi cNsvwB cWQGDz"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Dark Button
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="dark"
          className="sc-hKMtZM sc-gKXOVf hUkRow llhpmf"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="dark"
          className="sc-hKMtZM sc-gKXOVf hjkHIi llhpmf"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Gradient Button
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="gradient"
          className="sc-hKMtZM sc-ftvSup hUkRow cVtMTO"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="gradient"
          className="sc-hKMtZM sc-ftvSup hjkHIi cVtMTO"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button default
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="text"
          className="sc-hKMtZM sc-papXJ jyiEhr fikKSz"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="text"
          className="sc-hKMtZM sc-papXJ gVxlCJ fikKSz"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <section
        className="sc-hAZoDl kBYSim css-1btod5z"
      >
        <button
          appearance="text"
          className="sc-hKMtZM sc-papXJ jyiEhr duhSHg"
          color="red"
          data-element="button"
          icon="settings"
          radius="default"
          size="large"
          variant="large"
        />
        <button
          appearance="text"
          className="sc-hKMtZM sc-papXJ gVxlCJ duhSHg"
          color="red"
          data-element="button"
          icon="settings"
          radius="default"
          size="medium"
          variant="medium"
        />
      </section>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button Text with Icon 1`] = `
<div
  className="sc-fnykZs fmpsuH"
  style={
    Object {
      "background": "#EFF0F6",
      "padding": 50,
    }
  }
>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Button
      </h3>
      <button
        appearance="primary"
        className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="primary"
        className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Primary Ghost (Transparent)
      </h3>
      <button
        appearance="primary-ghost"
        className="sc-hKMtZM sc-iBkjds JKzku jwNdkq"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="primary-ghost"
        className="sc-hKMtZM sc-iBkjds JKzku jwNdkq"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Secondary Button
      </h3>
      <button
        appearance="secondary"
        className="sc-hKMtZM sc-jSMfEi GLyTH ioWRiD"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="secondary"
        className="sc-hKMtZM sc-jSMfEi GLyTH ioWRiD"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Dark Button
      </h3>
      <button
        appearance="dark"
        className="sc-hKMtZM sc-gKXOVf JKzku llhpmf"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="dark"
        className="sc-hKMtZM sc-gKXOVf JKzku llhpmf"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Gradient Button
      </h3>
      <button
        appearance="gradient"
        className="sc-hKMtZM sc-ftvSup JKzku cVtMTO"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="gradient"
        className="sc-hKMtZM sc-ftvSup JKzku cVtMTO"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button default
      </h3>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ ldzgGV fikKSz"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ ldzgGV fikKSz"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
  <section
    className="sc-hAZoDl iZItRi"
    span={4}
  >
    <div
      className="sc-evZas itRWRR"
      gap={1}
    >
      <h3
        className="sc-fEOsli gaBXLN c-text--heading-3"
      >
        Text Button custom color
      </h3>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ ldzgGV duhSHg"
        color="red"
        data-element="button"
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
      <button
        appearance="text"
        className="sc-hKMtZM sc-papXJ ldzgGV duhSHg"
        color="red"
        data-element="button"
        disabled={true}
        radius="default"
        size="medium"
        variant="medium"
      >
        Oxfd...586c
        <div
          className="sc-kDDrLX ddEmQZ"
          gap={0.75}
        />
      </button>
    </div>
  </section>
</div>
`;

exports[`Storyshots Components/Button Variants 1`] = `
<div
  className="sc-kDDrLX iFyCNQ"
>
  <div
    className="sc-fnykZs fmpsuH"
  >
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Thin
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ lkyxRz jriGrI"
          data-element="button"
          radius="default"
          size="medium"
          variant="thin"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Medium
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ JKzku jriGrI"
          data-element="button"
          radius="default"
          size="medium"
          variant="medium"
        >
          Button
        </button>
      </div>
    </section>
    <section
      className="sc-hAZoDl iZItRi"
      span={4}
    >
      <div
        className="sc-evZas itRWRR"
        gap={1}
      >
        <h3
          className="sc-fEOsli gaBXLN c-text--heading-3"
        >
          Large
        </h3>
        <button
          appearance="primary"
          className="sc-hKMtZM sc-eCYdqJ dvrOfZ jriGrI"
          data-element="button"
          radius="default"
          size="medium"
          variant="large"
        >
          Button
        </button>
      </div>
    </section>
  </div>
</div>
`;
